Allow for enabling Alertmanager HA cluster mode even when running with single replica, via newly introduced forceEnableClusterMode flag.
With #3196 we lost the possibility to setup Alertmanager clusters with a single replica across multiple Kubernetes clusters.

Fixes #3337

--- a/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagers.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagers.yaml
@@ -655,6 +655,11 @@ spec:
                   in cluster. Needs to be provided for non RFC1918 [1] (public) addresses.
                   [1] RFC1918: https://tools.ietf.org/html/rfc1918'
                 type: string
+              forceEnableClusterMode:
+                description: ForceEnableClusterMode ensures Alertmanager does not deactivate
+                  the cluster mode when running with a single replica. Use case is e.g. spanning
+                  an Alertmanager cluster across Kubernetes clusters with a single replica in each.
+                type: boolean
               configMaps:
                 description: ConfigMaps is a list of ConfigMaps in the same namespace
                   as the Alertmanager object, which shall be mounted into the Alertmanager
