--- a/bundle.yaml
+++ b/bundle.yaml
@@ -4732,9 +4732,6 @@ spec:
                           - key
                           type: object
                       type: object
-                    bearerTokenFile:
-                      description: File to read bearer token for scraping targets.
-                      type: string
                     bearerTokenSecret:
                       description: Secret to mount to read bearer token for scraping
                         targets. The secret needs to be in the same namespace as the
@@ -4892,7 +4889,7 @@ spec:
                       description: TLS configuration to use when scraping the endpoint.
                       properties:
                         ca:
-                          description: Stuct containing the CA cert to use for the
+                          description: Struct containing the CA cert to use for the
                             targets.
                           properties:
                             configMap:
@@ -4934,10 +4931,6 @@ spec:
                               - key
                               type: object
                           type: object
-                        caFile:
-                          description: Path to the CA cert in the Prometheus container
-                            to use for the targets.
-                          type: string
                         cert:
                           description: Struct containing the client cert file for
                             the targets.
@@ -4981,17 +4974,9 @@ spec:
                               - key
                               type: object
                           type: object
-                        certFile:
-                          description: Path to the client cert file in the Prometheus
-                            container for the targets.
-                          type: string
                         insecureSkipVerify:
                           description: Disable target certificate validation.
                           type: boolean
-                        keyFile:
-                          description: Path to the client key file in the Prometheus
-                            container for the targets.
-                          type: string
                         keySecret:
                           description: Secret containing the client key file for the
                             targets.
@@ -6072,7 +6057,7 @@ spec:
                           description: TLS Config to use for alertmanager connection.
                           properties:
                             ca:
-                              description: Stuct containing the CA cert to use for
+                              description: Struct containing the CA cert to use for
                                 the targets.
                               properties:
                                 configMap:
@@ -6279,7 +6264,8 @@ spec:
                     description: TLS Config to use for accessing apiserver.
                     properties:
                       ca:
-                        description: Stuct containing the CA cert to use for the targets.
+                        description: Struct containing the CA cert to use for the
+                          targets.
                         properties:
                           configMap:
                             description: ConfigMap containing data to use for the
@@ -8977,7 +8963,7 @@ spec:
                       description: TLS Config to use for remote read.
                       properties:
                         ca:
-                          description: Stuct containing the CA cert to use for the
+                          description: Struct containing the CA cert to use for the
                             targets.
                           properties:
                             configMap:
@@ -9214,7 +9200,7 @@ spec:
                       description: TLS Config to use for remote write.
                       properties:
                         ca:
-                          description: Stuct containing the CA cert to use for the
+                          description: Struct containing the CA cert to use for the
                             targets.
                           properties:
                             configMap:
@@ -10068,7 +10054,8 @@ spec:
                       Maps to the ''--grpc-server-tls-*'' CLI args.'
                     properties:
                       ca:
-                        description: Stuct containing the CA cert to use for the targets.
+                        description: Struct containing the CA cert to use for the
+                          targets.
                         properties:
                           configMap:
                             description: ConfigMap containing data to use for the
@@ -11972,7 +11959,7 @@ spec:
                       description: TLS configuration to use when scraping the endpoint
                       properties:
                         ca:
-                          description: Stuct containing the CA cert to use for the
+                          description: Struct containing the CA cert to use for the
                             targets.
                           properties:
                             configMap:
@@ -13933,7 +13920,7 @@ spec:
                   the ''--grpc-server-tls-*'' CLI args.'
                 properties:
                   ca:
-                    description: Stuct containing the CA cert to use for the targets.
+                    description: Struct containing the CA cert to use for the targets.
                     properties:
                       configMap:
                         description: ConfigMap containing data to use for the targets.
