Update alert definition with new metric

--- a/example/mixin/alerts.yaml
+++ b/example/mixin/alerts.yaml
@@ -13,11 +13,11 @@ groups:
       severity: warning
   - alert: PrometheusOperatorReconcileErrors
     annotations:
-      description: Errors while reconciling {{ $labels.controller }} in {{ $labels.namespace
-        }} Namespace.
+      description: '{{ $value | humanizePercentage }} of reconciling operations failed
+        for {{ $labels.controller }} controller in {{ $labels.namespace }} namespace.'
       summary: Errors while reconciling controller.
     expr: |
-      rate(prometheus_operator_reconcile_errors_total{job="prometheus-operator"}[5m]) > 0.1
+      (sum by (controller,namespace) (rate(prometheus_operator_reconcile_errors_total{job="prometheus-operator"}[5m])) / (sum by (controller,namespace) (rate(prometheus_operator_reconcile_operations_total{job="prometheus-operator"}[5m])) > 0.1
     for: 10m
     labels:
       severity: warning
