Support Job Name in service and pod monitors
Signed-off-by: Quentin Bisson <quentin@giantswarm.io>

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -4669,6 +4669,9 @@ spec:
               jobLabel:
                 description: The label to use to retrieve the job name from.
                 type: string
+              jobName:
+                description: The job name assigned to scraped metrics by default.
+                type: string
               namespaceSelector:
                 description: Selector to select which namespaces the Endpoints objects
                   are discovered from.
@@ -11906,6 +11909,9 @@ spec:
                 type: array
               jobLabel:
                 description: The label to use to retrieve the job name from.
+                type: string
+              jobName:
+                description: The job name assigned to scraped metrics by default.
                 type: string
               namespaceSelector:
                 description: Selector to select which namespaces the Endpoints objects
