--- a/example/mixin/alerts.yaml
+++ b/example/mixin/alerts.yaml
@@ -1,13 +1,23 @@
 groups:
 - name: prometheus-operator
   rules:
+  - alert: PrometheusOperatorListErrors
+    annotations:
+      description: Errors while performing List operations in controller {{$labels.controller}}
+        in {{$labels.namespace}} namespace.
+      summary: Errors while performing list operations in controller.
+    expr: |
+      (sum by (controller,namespace) (rate(prometheus_operator_list_operations_failed_total{job="prometheus-operator"}[10m])) / sum by (controller,namespace) (rate(prometheus_operator_list_operations_total{job="prometheus-operator"}[10m]))) > 0.4
+    for: 15m
+    labels:
+      severity: warning
   - alert: PrometheusOperatorWatchErrors
     annotations:
       description: Errors while performing watch operations in controller {{$labels.controller}}
         in {{$labels.namespace}} namespace.
       summary: Errors while performing watch operations in controller.
     expr: |
-      (sum by (controller,namespace) (rate(prometheus_operator_watch_operations_failed_total{job="prometheus-operator"}[1h])) / sum by (controller,namespace) (rate(prometheus_operator_watch_operations_total{job="prometheus-operator"}[1h]))) > 0.1
+      (sum by (controller,namespace) (rate(prometheus_operator_watch_operations_failed_total{job="prometheus-operator"}[10m])) / sum by (controller,namespace) (rate(prometheus_operator_watch_operations_total{job="prometheus-operator"}[10m]))) > 0.4
     for: 15m
     labels:
       severity: warning
