--- a/example/mixin/alerts.yaml
+++ b/example/mixin/alerts.yaml
@@ -27,7 +27,7 @@ groups:
         for {{ $labels.controller }} controller in {{ $labels.namespace }} namespace.'
       summary: Errors while reconciling controller.
     expr: |
-      (sum by (controller,namespace) (rate(prometheus_operator_reconcile_errors_total{job="prometheus-operator"}[5m])) / (sum by (controller,namespace) (rate(prometheus_operator_reconcile_operations_total{job="prometheus-operator"}[5m])) > 0.1
+      (sum by (controller,namespace) (rate(prometheus_operator_reconcile_errors_total{job="prometheus-operator"}[5m]))) / (sum by (controller,namespace) (rate(prometheus_operator_reconcile_operations_total{job="prometheus-operator"}[5m]))) > 0.1
     for: 10m
     labels:
       severity: warning
