--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,6 +21,16 @@ jobs:
       with:
         go-version: ${{ env.golang-version }}
     - run: make --always-make format generate && git diff --exit-code
+  check-links:
+    runs-on: ubuntu-latest
+    name: Check markdown links
+    steps:
+    - uses: actions/checkout@v2
+    - uses: gaurav-nelson/github-action-markdown-link-check@v1
+      with:
+        use-quiet-mode: 'yes'
+        config-file: '.github/workflows/.mlc_config.json'
+      continue-on-error: true
   build:
     runs-on: ${{ matrix.os }}
     strategy:
