rules: allow additional custom rule file paths
This allows user to mount in own Prometheus rules and configure
Prometheus to use them.

Signed-off-by: Martin Chodur <m.chodur@seznam.cz>

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -7065,6 +7065,11 @@ spec:
                 required:
                 - key
                 type: object
+              additionalRuleFilePaths:
+                description: List of additional file path globs to read rules from.
+                items:
+                  type: string
+                type: array
               additionalScrapeConfigs:
                 description: 'AdditionalScrapeConfigs allows specifying a key of a
                   Secret containing additional Prometheus scrape configurations. Scrape
