--- a/bundle.yaml
+++ b/bundle.yaml
@@ -11562,6 +11562,14 @@ spec:
                 description: Enable compression of the write-ahead log using Snappy.
                   This flag is only available in versions of Prometheus >= 2.11.0.
                 type: boolean
+              web:
+                description: WebSpec defines the web command line flags when starting
+                  Prometheus.
+                properties:
+                  pageTitle:
+                    description: The prometheus web page title
+                    type: string
+                type: object
             type: object
           status:
             description: 'Most recent observed status of the Prometheus cluster. Read-only.
