--- a/example/thanos/prometheus-cluster-role-binding.yaml
+++ b/example/thanos/prometheus-cluster-role-binding.yaml
@@ -1,11 +1,11 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
+kind: ClusterRoleBinding
 metadata:
   name: prometheus-self
   namespace: default
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: Role
+  kind: ClusterRole
   name: prometheus-self
 subjects:
 - kind: ServiceAccount
