--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,6 +31,15 @@ jobs:
         use-quiet-mode: 'yes'
         config-file: '.github/workflows/.mlc_config.json'
       continue-on-error: true
+  check-golang:
+    runs-on: ubuntu-latest
+    name: Golang linter
+    steps:
+      - uses: actions/checkout@v2
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v2
+        with:
+          version: v1.29
   build:
     runs-on: ${{ matrix.os }}
     strategy:
